--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "bootstrap": "^5.1.3",
     "dayjs": "^1.10.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
